Remove unused buttons and update price chart canvas ID; implement price chart rendering - temporary test chart before final edition

--- a/index.html
+++ b/index.html
@@ -130,16 +130,6 @@
           <h2 class="text-xl font-bold text-white">Price History</h2>
           <div class="flex gap-2">
             <button
-              class="px-3 py-1 bg-accent text-white text-sm rounded-md hover:bg-accent-dark transition-colors"
-            >
-              24h
-            </button>
-            <button
-              class="px-3 py-1 bg-gray-800 text-gray-300 text-sm rounded-md hover:bg-gray-700 transition-colors"
-            >
-              7d
-            </button>
-            <button
               class="px-3 py-1 bg-gray-800 text-gray-300 text-sm rounded-md hover:bg-gray-700 transition-colors"
             >
               30d
@@ -147,7 +137,7 @@
           </div>
         </div>
         <div class="h-64">
-          <canvas id="priceChart"></canvas>
+          <canvas id="price-chart"></canvas>
         </div>
       </div>
 
