--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           Crypto Nexus
         </h1>
         <button
+          onclick="loadAPI()"
           class="p-2 rounded-full bg-gray-800 hover:bg-gray-700 text-purple-400 transition-colors"
         >
           <i class="fas fa-moon"></i>
@@ -154,6 +155,9 @@
       </div>
     </main>
 
-    <script src="script.js"></script>
+    <script
+      type="module"
+      src="script.js"
+    ></script>
   </body>
 </html>
