--- a/index.html
+++ b/index.html
@@ -56,16 +56,23 @@
     <!-- Main Content -->
     <main class="container mx-auto px-4 py-8">
       <!-- Crypto Selection -->
-      <div class="flex flex-wrap gap-2 mb-6">
+      <div class="crypto-buttons flex flex-wrap gap-2 mb-6">
         <button
           class="px-4 py-2 bg-indigo-600 text-white rounded-md active"
+          data-crypto="bitcoin"
         >
           Bitcoin
         </button>
-        <button class="px-4 py-2 bg-gray-200 text-gray-800 rounded-md">
+        <button
+          class="px-4 py-2 bg-gray-200 text-gray-800 rounded-md"
+          data-crypto="ethereum"
+        >
           Ethereum
         </button>
-        <button class="px-4 py-2 bg-gray-200 text-gray-800 rounded-md">
+        <button
+          class="px-4 py-2 bg-gray-200 text-gray-800 rounded-md"
+          data-crypto="solana"
+        >
           Solana
         </button>
         <!-- Add more crypto buttons as needed -->
